--- a/blossom/Assembly-CSharp.csproj
+++ b/blossom/Assembly-CSharp.csproj
@@ -55,8 +55,15 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\DialogSystem.cs" />
     <Compile Include="Assets\Scripts\FightSystem.cs" />
+    <Compile Include="Assets\Scripts\DialogSystem.cs" />
+    <Compile Include="Assets\Scripts\WalkSystem.cs" />
+    <Compile Include="Assets\Scripts\AISystem.cs" />
+    <Compile Include="Assets\Scripts\CameraSystem.cs" />
+    <Compile Include="Assets\AttackEnd.cs" />
+    <Compile Include="Assets\Scripts\AttackSystem.cs" />
+    <Compile Include="Assets\Scripts\Main.cs" />
+    <Compile Include="Assets\FistFalse.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -610,6 +617,9 @@
     </Reference>
     <Reference Include="Unity.Rider.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.2D.Sprite.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.2D.Sprite.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
