--- a/blossom/Assembly-CSharp.csproj
+++ b/blossom/Assembly-CSharp.csproj
@@ -58,19 +58,20 @@
     <Compile Include="Assets\Scripts\AttackSystem.cs" />
     <Compile Include="Assets\FistFalse.cs" />
     <Compile Include="Assets\Scripts\MusicSystem.cs" />
+    <Compile Include="Assets\Scripts\SoundSystem.cs" />
     <Compile Include="Assets\Scripts\Main.cs" />
     <Compile Include="Assets\Scripts\AISystem.cs" />
     <Compile Include="Assets\AIAttack1End.cs" />
     <Compile Include="Assets\Scripts\FightSystem.cs" />
     <Compile Include="Assets\Scripts\BackgroundProp.cs" />
     <Compile Include="Assets\Scripts\DialogSystem.cs" />
+    <Compile Include="Assets\FallEnd.cs" />
     <Compile Include="Assets\Scripts\WalkSystem.cs" />
     <Compile Include="Assets\AttackEnd.cs" />
     <Compile Include="Assets\StunFalse.cs" />
     <Compile Include="Assets\Scripts\CameraSystem.cs" />
     <Compile Include="Assets\Ragefalse.cs" />
-    <Compile Include="Assets\FallEnd.cs" />
-    <Compile Include="Assets\Scripts\SoundSystem.cs" />
+    <Compile Include="Assets\Scripts\MainMenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
